Make exceptions checked